# photogrammetry-evaluations

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_subset.sh  incremental_reconstruction.sh  package.xml
Tools/: draw_colorbar.py  evaluate_map.py  get_mapstatistics.py  run_benchmark.py  run_evaluation.py  visualize_evaluation.py
include/photogrammetry_evaluations/: colmap_io.h  evaluation.h  exif_io.h
launch/: compare_mesh.launch  config.rviz  config_replay.rviz  evaluate.launch  nbv_mapping.launch  process_geotag.launch  replay.launch  replay_path.launch  test_sfm.launch
resources/: cadastre_1m.tif  cadastre_1m_color.tif  dc_benchmark.yaml  mesh_compare.yaml  nbv_benchmark.yaml  nbv_resolution.yaml  quarry_1m.tif  quarry_1m_color.tif
scripts/: benchmark.sh  compare_mesh.sh  evaluate_model.sh  generate_dataset.sh  incremental_reconstruction.sh  process_geotag.sh  reconstruction.sh  register.sh
src/: compare_mesh_node.cpp  evaluate_node.cpp  evaluation.cpp  main.cpp  nbv_mapping.cpp  process_geotag.cpp  replay_node.cpp  replay_path_node.cpp  test_sfm.cpp
